# mathutils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
include/: mathutils.h
src/: main.cpp  mathutils.cpp
tests/: test_mathutils.cpp
